thirdparty/unidac/Include/Delphi27/Win32/CRVioTcpSSL.hpp


//-- forward type declarations -----------------------------------------------
struct st_VioSSLConnectorFd;

class DELPHICLASS TCRVioTcpSSL;
struct DECLSPEC_DRECORD st_VioSSLConnectorFd
{
public:
	void *ssl_context_;
	void *ssl_method_;
};

extern DELPHI_PACKAGE bool OpenSSL11_Mode;

extern DELPHI_PACKAGE int __cdecl (*SSL_write)(void * s, void * pBuf, int len);

extern DELPHI_PACKAGE int __cdecl (*SSL_read)(void * s, void * pBuf, int len);

extern DELPHI_PACKAGE int __cdecl (*SSL_get_error)(const void * s, int ret_code);

extern DELPHI_PACKAGE void __cdecl (*SSL_free)(void * s);

extern DELPHI_PACKAGE void __cdecl (*SSL_load_error_strings)(void);

extern DELPHI_PACKAGE void * __cdecl (*TLS_method)(void);

extern DELPHI_PACKAGE int __cdecl (*SSL_library_init)(void);

extern DELPHI_PACKAGE void * __cdecl (*SSL_CTX_new)(void * meth);

extern DELPHI_PACKAGE int __cdecl (*SSL_CTX_set_cipher_list)(void * actx, const char * str);

extern DELPHI_PACKAGE void __cdecl (*SSL_CTX_free)(void * actx);

extern DELPHI_PACKAGE void * __cdecl (*SSL_new)(void * s);

extern DELPHI_PACKAGE int __cdecl (*SSL_clear)(void * s);

extern DELPHI_PACKAGE int __cdecl (*SSL_SESSION_set_timeout)(void * s, unsigned t);

extern DELPHI_PACKAGE void * __cdecl (*SSL_get_session)(void * s);

extern DELPHI_PACKAGE int __cdecl (*SSL_set_fd)(void * s, int fd);

extern DELPHI_PACKAGE void __cdecl (*SSL_set_connect_state)(void * s);

extern DELPHI_PACKAGE int __cdecl (*SSL_do_handshake)(void * s);

extern DELPHI_PACKAGE void __cdecl (*SSL_CTX_set_verify)(void * actx, int mode, void * acallback);

extern DELPHI_PACKAGE int __cdecl (*SSL_CTX_load_verify_locations)(void * actx, const char * CAfile, const char * CApath);

extern DELPHI_PACKAGE int __cdecl (*SSL_CTX_set_default_verify_paths)(void * actx);

extern DELPHI_PACKAGE int __cdecl (*SSL_CTX_use_certificate_file)(void * actx, const char * afile, int atype);

extern DELPHI_PACKAGE int __cdecl (*SSL_CTX_use_PrivateKey_file)(void * actx, const char * afile, int atype);

extern DELPHI_PACKAGE int __cdecl (*SSL_CTX_check_private_key)(const void * actx);

extern DELPHI_PACKAGE void * __cdecl (*DH_new)(void);

extern DELPHI_PACKAGE int __cdecl (*DH_free)(void * dh);

extern DELPHI_PACKAGE void __cdecl (*OPENSSL_add_all_algorithms_noconf)(void);

extern DELPHI_PACKAGE void * __cdecl (*BN_bin2bn)(const void * s, int len, void * ret);

extern DELPHI_PACKAGE void * __cdecl (*X509_get_subject_name)(void * a);

extern DELPHI_PACKAGE char * __cdecl (*X509_NAME_oneline)(void * a, char * buf, int size);

extern DELPHI_PACKAGE int __cdecl (*X509_STORE_CTX_get_error_depth)(void * actx);

extern DELPHI_PACKAGE int __cdecl (*X509_STORE_CTX_get_error)(void * actx);

extern DELPHI_PACKAGE void * __cdecl (*X509_STORE_CTX_get_current_cert)(void * actx);

extern DELPHI_PACKAGE int __cdecl (*SSL_CTX_ctrl)(void * actx, int a1, int a2, void * adh);

extern DELPHI_PACKAGE void * __cdecl (*X509_get_issuer_name)(void * a);

extern DELPHI_PACKAGE System::UnicodeString LIBEAY32DLL;

extern DELPHI_PACKAGE System::UnicodeString SSLEAY32DLL;

extern DELPHI_PACKAGE bool ssl_algorithms_added;

extern DELPHI_PACKAGE bool ssl_error_strings_loaded;

extern DELPHI_PACKAGE NativeUInt hlibeay;

extern DELPHI_PACKAGE NativeUInt hssleay;

extern DELPHI_PACKAGE int __cdecl vio_verify_callback(int ok, void * ctx);

extern DELPHI_PACKAGE int __fastcall vio_set_cert_stuff(void * ctx, const System::UnicodeString cert_file, System::UnicodeString key_file);

extern DELPHI_PACKAGE void * __fastcall get_dh512(void);

extern DELPHI_PACKAGE void __fastcall LoadSSLLib(bool SilentMode = false);

extern DELPHI_PACKAGE void __fastcall InitSSLLib(bool SilentMode = false);