thirdparty/unidac/Source/CRVioTcpSSL.pas


//////////////////////////////////////////////////
//  Copyright © 1998-2021 Devart. All right reserved.
//////////////////////////////////////////////////

{$I Dac.inc}
unit CRVioTcpSSL;

interface

uses
{$IFDEF MSWINDOWS}
  Windows,
{$ENDIF}
  Classes, SyncObjs,
  CLRClasses, CRVio,
  CRTypes, CRVioTcp;

const
  SSL_VERIFY_NONE      = 0;
  SSL_CTRL_SET_TMP_DH  = 3;

  SSL_ERROR_WANT_READ  = 2;
  SSL_ERROR_WANT_WRITE = 3;

type
  st_VioSSLConnectorFd = packed record
    ssl_context_: IntPtr;
    ssl_method_: IntPtr;
  end;

  TCRVioTcpSSL = class(TCRVioTcp)
  protected
    FisSecure: boolean;
    FSSL_key, FSSL_cert, FSSL_ca, FSSL_capath, FSSL_cipher: string;

    Fnewcon: st_VioSSLConnectorFd;
    Fssl_arg: IntPtr;

    procedure new_VioSSLConnectorFd;
    procedure SetisSecure(Value: boolean);

  public
    constructor Create(const hostname: string; const port: integer;
      const SSL_key, SSL_cert, SSL_ca, SSL_capath, SSL_cipher: string; IPVersion: TIPVersion = ivIPv4);
    destructor Destroy; override;
    function ReadNoWait(const buffer: TValueArr; offset, count: integer): integer; override;
    function WriteNoWait(const buffer: TValueArr; offset, count: integer): integer; override;

    property isSecure: boolean read FisSecure write SetisSecure;
  end;

var
  OpenSSL11_Mode : Boolean;
  SSL_write: function(s: IntPtr; pBuf: IntPtr; len: integer): integer; cdecl;
  SSL_read: function(s: IntPtr; pBuf: IntPtr; len: integer): integer; cdecl;
  SSL_get_error: function(const s: IntPtr; ret_code: integer): integer; cdecl;
  //SSL_shutdown: function(s: IntPtr): integer; cdecl;
  SSL_free: procedure(s: IntPtr); cdecl;

  SSL_load_error_strings: procedure; cdecl;
  TLS_method: function: IntPtr; cdecl;
  SSL_library_init: function: integer; cdecl;

  SSL_CTX_new: function(meth: IntPtr): IntPtr; cdecl;
  SSL_CTX_set_cipher_list: function(actx: IntPtr; const str: PAnsiChar): integer; cdecl;
  SSL_CTX_free: procedure(actx: IntPtr); cdecl;
  SSL_new: function(s: IntPtr): IntPtr; cdecl;
  SSL_clear: function(s: IntPtr): integer; cdecl;
  SSL_SESSION_set_timeout: function(s: IntPtr; t: cardinal): integer; cdecl;
  SSL_get_session: function(s: IntPtr): IntPtr; cdecl;
  SSL_set_fd: function(s: IntPtr; fd: integer): integer; cdecl;
  SSL_set_connect_state: procedure(s: IntPtr); cdecl;
  SSL_do_handshake: function(s: IntPtr): integer; cdecl;
  //SSL_get_peer_certificate: function(s: IntPtr): IntPtr; cdecl;
  //SSL_set_session: function(_to: IntPtr; session: IntPtr): integer; cdecl;
  //SSL_connect: function(s: IntPtr): integer; cdecl;
  //SSL_CIPHER_get_name: function(c: IntPtr): PAnsiChar; cdecl;
  //SSL_get_current_cipher: function(s: IntPtr): IntPtr; cdecl;
  SSL_CTX_set_verify: procedure(actx: IntPtr;mode: integer;acallback: IntPtr); cdecl;
  SSL_CTX_load_verify_locations: function(actx: IntPtr; const CAfile: PAnsiChar; const CApath: PAnsiChar): integer; cdecl;
  SSL_CTX_set_default_verify_paths: function(actx: IntPtr): integer; cdecl;
  SSL_CTX_use_certificate_file: function(actx: IntPtr; const afile: PAnsiChar; atype: integer): integer; cdecl;
  SSL_CTX_use_PrivateKey_file: function(actx: IntPtr; const afile: PAnsiChar; atype: integer): integer; cdecl;
  SSL_CTX_check_private_key: function(const actx: IntPtr): integer; cdecl;
  DH_new: function: IntPtr; cdecl;
  DH_free: function(dh: IntPtr): integer; cdecl;
  OPENSSL_add_all_algorithms_noconf: procedure; cdecl;
  BN_bin2bn: function(const s: IntPtr; len: integer;ret: IntPtr): IntPtr; cdecl;
  X509_get_subject_name: function(a: IntPtr): IntPtr; cdecl;
  X509_NAME_oneline: function(a: IntPtr; buf: PAnsiChar;size: integer): PAnsiChar; cdecl;
  X509_STORE_CTX_get_error_depth: function(actx: IntPtr): integer; cdecl;
  X509_STORE_CTX_get_error: function(actx: IntPtr): integer; cdecl;
  X509_STORE_CTX_get_current_cert: function(actx: IntPtr): IntPtr; cdecl;
  SSL_CTX_ctrl: function(actx: IntPtr; a1: integer; a2: integer; adh: IntPtr): integer; cdecl;
  //X509_verify_cert_error_string: function(n: integer): PAnsiChar; cdecl;
  X509_get_issuer_name: function(a: IntPtr): IntPtr; cdecl;
  //ERR_get_error_line_data: function(const afile: IntPtr; line: IntPtr; const data: IntPtr;flags: IntPtr): integer; cdecl;
  //ERR_error_string: function(e: cardinal; buf: PAnsiChar): PAnsiChar; cdecl;
  //X509_free: function(a: IntPtr); cdecl;

var
{$IFDEF MSWINDOWS}
  LIBEAY32DLL: string;
  SSLEAY32DLL: string;
{$ELSE}
  SSLLIB: string;
{$ENDIF}

var
  ssl_algorithms_added: boolean = False;
  ssl_error_strings_loaded: boolean = False;

function vio_verify_callback(ok: integer; ctx: IntPtr): integer; cdecl;
function vio_set_cert_stuff(ctx: IntPtr; const cert_file: string; key_file: string): integer;
function get_dh512: IntPtr;

procedure InitSSLLib(SilentMode: Boolean = False);
procedure LoadSSLLib(SilentMode: Boolean = False);

var
{$IFDEF MSWINDOWS}
  hlibeay, hssleay: HMODULE;
{$ELSE}
{$IFDEF UNIX}
  hssleay, hlibeay: pointer;
{$ENDIF}
{$IFDEF POSIX}
  hssleay, hlibeay: NativeUInt;
{$ENDIF}
{$ENDIF MSWINDOWS}

implementation

uses
{$IFDEF POSIX}
  Posix.Dlfcn,
{$ENDIF}
{$IFDEF VER12P}{$IFNDEF NEXTGEN}
  AnsiStrings,
{$ENDIF}{$ENDIF}
{$IFDEF UNIX}
  dl,
{$ENDIF}
  SysUtils;

const
  MaxIOAttempts = 10;

var
{$IFNDEF MSWINDOWS}
{$IFDEF UNIX}
  hlib: pointer;
{$ENDIF}
{$IFDEF POSIX}
  hlib: NativeUInt;
{$ENDIF}
{$ENDIF MSWINDOWS}
  SSLInitLock: TCriticalSection;

constructor TCRVioTcpSSL.Create(const hostname: string; const port: integer;
  const SSL_key, SSL_cert, SSL_ca, SSL_capath, SSL_cipher: string; IPVersion: TIPVersion);
begin
  inherited Create(hostname, port, IPVersion);
  FSSL_key := SSL_key;
  FSSL_cert := SSL_cert;
  FSSL_ca := SSL_ca;
  FSSL_capath := SSL_capath;
  FSSL_cipher := SSL_cipher;

  InitSSLLib;
end;

destructor TCRVioTcpSSL.Destroy;
begin
  if Fnewcon.ssl_context_ <> nil then begin
    SSL_CTX_free(Fnewcon.ssl_context_);
    Fnewcon.ssl_context_ := nil;
  end;

  if Fssl_arg <> nil then begin
    SSL_free(Fssl_arg);
    Fssl_arg := nil;
  end;

  inherited;
end;

procedure TCRVioTcpSSL.new_VioSSLConnectorFd;
{$IFNDEF ANDROID}
var
  // r: int;
  dh: IntPtr;
{$ENDIF}
begin
  Fnewcon.ssl_context_ := nil;
  Fnewcon.ssl_method_ := nil;

  if ((not OpenSSL11_Mode) and (SSL_library_init = 0)) then
    raise Exception.Create('SSL library initialization failed');

  if not ssl_algorithms_added then begin
    ssl_algorithms_added := True;
  {$IFNDEF ANDROID}
    if not OpenSSL11_Mode then
      OpenSSL_add_all_algorithms_noconf();
  {$ENDIF}
  end;
  if not ssl_error_strings_loaded then begin
    ssl_error_strings_loaded := TRUE;
    if not OpenSSL11_Mode then
      SSL_load_error_strings();
  end;

  Fnewcon.ssl_method_ := TLS_method();
  Fnewcon.ssl_context_ := SSL_CTX_new(Fnewcon.ssl_method_);

  Assert(Fnewcon.ssl_context_ <> nil);
  (*
    SSL_CTX_set_options
    SSL_CTX_set_info_callback
   *)
  if Trim(FSSL_cipher) <> '' then
    {r := }SSL_CTX_set_cipher_list(Fnewcon.ssl_context_, PAnsiChar(AnsiString(FSSL_cipher)));
{$IFNDEF ANDROID}
  SSL_CTX_set_verify(Fnewcon.ssl_context_, SSL_VERIFY_NONE, @vio_verify_callback);//???
{$ENDIF}
  Assert(vio_set_cert_stuff(Fnewcon.ssl_context_, FSSL_cert, FSSL_key) <> -1);

  if SSL_CTX_load_verify_locations(Fnewcon.ssl_context_, PAnsiChar(AnsiString(FSSL_ca)), PAnsiChar(AnsiString(FSSL_capath))) = 0 then
    Assert(SSL_CTX_set_default_verify_paths(Fnewcon.ssl_context_) <> 0);

{$IFNDEF ANDROID}
  (* DH stuff *)
  dh := get_dh512();
  Assert(dh <> nil);
  try
    // SSL_CTX_set_tmp_dh(Fnewcon.ssl_context_, dh);
    // #define SSL_CTX_set_tmp_dh(ctx,dh) \
    //   SSL_CTX_ctrl(ctx,SSL_CTRL_SET_TMP_DH,0,(char *)dh)
    SSL_CTX_ctrl(Fnewcon.ssl_context_, SSL_CTRL_SET_TMP_DH, 0, dh);
  finally
    DH_free(dh);
  end;
{$ENDIF}
end;

procedure TCRVioTcpSSL.SetisSecure(Value: boolean);
var
  r, r1, r2: integer;
begin
  Assert(Value = True);
  Assert(Fsd <> -1);
  new_VioSSLConnectorFd;

(*???  net_blocking := vio_is_blocking(vio);
  vio_blocking(vio, 1, &unused);	(* Must be called before reset * )
  vio_reset(vio,VIO_TYPE_SSL,vio->sd,0,FALSE);*)
  Fssl_arg := SSL_new(Fnewcon.ssl_context_);
  try
    Assert(Fssl_arg <> nil, 'SSL_new failure');

    SSL_clear(Fssl_arg);
    SSL_SESSION_set_timeout(SSL_get_session(Fssl_arg), timeout);
    SSL_set_fd(Fssl_arg, FSd);
    SSL_set_connect_state(Fssl_arg);
    r := SSL_do_handshake(Fssl_arg);
    r2 := r;
    r1 := SSL_get_error(Fssl_arg, r2);

    if r <> 1 then
      raise Exception.Create('SSL_do_handshake = ' + IntToStr(r) + #$D#$A + 'SSL_get_error(..., r2) = ' + IntToStr(r1) + #$D#$A + 'r2 = ' + IntToStr(r2));
    FisSecure := True;
  except
    // report_errors();
    SSL_free(Fssl_arg);
    Fssl_arg := nil;
    (*vio_reset(vio, old_type,vio.sd,0,FALSE);
    vio_blocking(vio, net_blocking, &unused);*)
    raise;
  end;
end;

function TCRVioTcpSSL.ReadNoWait(const buffer: TValueArr; offset, count: integer): integer;
var
  pbuffer: IntPtr;
  ErrorCode, Attempt: integer;
begin
  if not isSecure then begin
    Result := inherited ReadNoWait(buffer, offset, count);
    Exit;
  end;

  pbuffer := @buffer[offset];

  Attempt := 1;
  repeat
    Result := SSL_read(Fssl_arg, pbuffer, count);
    if Result < 0 then begin
      ErrorCode := SSL_get_error(Fssl_arg, Result);
      if ErrorCode <> SSL_ERROR_WANT_READ then
        Break;
    end;
    Inc(Attempt);
  until (Result >= 0) or (Attempt > MaxIOAttempts);

  if Result < 0 then
    Result := 0; // silent error handling
end;

function TCRVioTcpSSL.WriteNoWait(const buffer: TValueArr; offset, count: integer): integer;
var
  pbuffer: IntPtr;
  ErrorCode, Attempt: integer;
begin
  if not isSecure then begin
    Result := inherited WriteNoWait(buffer, offset, count);
    Exit;
  end;

  pbuffer := @buffer[offset];

  Attempt := 1;
  repeat
    Result := SSL_write(Fssl_arg, pbuffer, count);
    if Result < 0 then begin
      ErrorCode := SSL_get_error(Fssl_arg, Result);
      if ErrorCode <> SSL_ERROR_WANT_WRITE then
        Break;
    end;
    Inc(Attempt);
  until (Result >= 0) or (Attempt > MaxIOAttempts);

  if Result < 0 then
    Result := 0; // silent error handling
end;

function vio_verify_callback(ok: integer; ctx: IntPtr): integer; cdecl;
type
  dummyctx = record
    pad: array[0..75]of byte;
    error: integer;
    current_cert: IntPtr;
  end;

var
  buf: array[0..255] of AnsiChar;
  err_cert: IntPtr;
  depth, err: integer;
begin
  //get the details
  err_cert := X509_STORE_CTX_get_current_cert(ctx);
  err := X509_STORE_CTX_get_error(ctx);
  depth := X509_STORE_CTX_get_error_depth(ctx);
  X509_NAME_oneline(X509_get_subject_name(err_cert), PAnsiChar(@buf), 256);
  if not (boolean(ok)) then begin
    if depth <= 0 then
      ok := 0
    else
      ok := 1;
  end;
  //some more details about the error
  case err of
    2: //X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT:
    begin
      X509_NAME_oneline(X509_get_issuer_name(err_cert), PAnsiChar(@buf), 256);
      //showmessage('issuer= '+buf);
    end;
    9, 13: //X509_V_ERR_CERT_NOT_YET_VALID:
           //X509_V_ERR_ERROR_IN_CERT_NOT_BEFORE_FIELD:
      //DBUG_PRINT("error", ("notBefore"));
      //*ASN1_TIME_print_fp(stderr,X509_get_notBefore(ctx->current_cert));*/
    ;
    10, 14: //X509_V_ERR_CERT_HAS_EXPIRED:
            //X509_V_ERR_ERROR_IN_CERT_NOT_AFTER_FIELD:
            //DBUG_PRINT("error", ("notAfter error"));
            //*ASN1_TIME_print_fp(stderr,X509_get_notAfter(ctx->current_cert));*/
    ;
  end;
  Result := ok;
end;
